==> lvoytek/ESP32Feather-ArduCam/ArduCAM.cpp <==
#include "ArduCAM.h"
#include <Wire.h>
#include <SPI.h>
#include "HardwareSerial.h"

void ArduCAM::InitCAM()
{
	wrSensorReg16_8(0x3008, 0x80);
	if (m_fmt == RAW)
	{
		//Init and set 640x480;
		wrSensorRegs16_8(OV5642_1280x960_RAW);	
		wrSensorRegs16_8(OV5642_640x480_RAW);	
	}
	else
	{	
		wrSensorRegs16_8(OV5642_QVGA_Preview);
		delay(100);
		if (m_fmt == JPEG)
		{
			delay(100);
			wrSensorRegs16_8(OV5642_JPEG_Capture_QSXGA);
			wrSensorRegs16_8(ov5642_320x240);
			delay(100);
			wrSensorReg16_8(0x3818, 0xa8);
			wrSensorReg16_8(0x3621, 0x10);
			wrSensorReg16_8(0x3801, 0xb0);
			#if (defined(OV5642_MINI_5MP_PLUS) || (defined ARDUCAM_SHIELD_V2))
			wrSensorReg16_8(0x4407, 0x04);
			#else
			wrSensorReg16_8(0x4407, 0x0C);
			#endif
			wrSensorReg16_8(0x5888, 0x00);
		}
		else
		{
			byte reg_val;
			wrSensorReg16_8(0x4740, 0x21);
			wrSensorReg16_8(0x501e, 0x2a);
			wrSensorReg16_8(0x5002, 0xf8);
			wrSensorReg16_8(0x501f, 0x01);
			wrSensorReg16_8(0x4300, 0x61);
			rdSensorReg16_8(0x3818, &reg_val);
			wrSensorReg16_8(0x3818, (reg_val | 0x60) & 0xff);
			rdSensorReg16_8(0x3621, &reg_val);
			wrSensorReg16_8(0x3621, reg_val & 0xdf);
		}
	}
}

void ArduCAM::set_fifo_burst()
{
    SPI.transfer(BURST_FIFO_READ);	
}

byte ArduCAM::wrSensorReg8_8(int regID, int regDat)
{
	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID & 0x00FF);
	Wire.write(regDat & 0x00FF);
	if (Wire.endTransmission())
	{
		return 0;
	}
	delay(1);
	return 1;
	
}

byte ArduCAM::rdSensorReg8_8(uint8_t regID, uint8_t* regDat)
{	
	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID & 0x00FF);
	Wire.endTransmission();

	Wire.requestFrom((sensor_addr >> 1), 1);
	if (Wire.available())
		*regDat = Wire.read();
	delay(1);
	return 1;
	
}

byte ArduCAM::wrSensorReg16_8(int regID, int regDat)
{
	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID >> 8);            // sends instruction byte, MSB first
	Wire.write(regID & 0x00FF);
	Wire.write(regDat & 0x00FF);
	if (Wire.endTransmission())
	{
		return 0;
	}
	delay(1);
	return 1;
}

byte ArduCAM::rdSensorReg16_8(uint16_t regID, uint8_t* regDat)
{
	Wire.beginTransmission(sensor_addr >> 1);
	Wire.write(regID >> 8);
	Wire.write(regID & 0x00FF);
	Wire.endTransmission();
	Wire.requestFrom((sensor_addr >> 1), 1);
	if (Wire.available())
	{
		*regDat = Wire.read();
	}
	delay(1);
	return 1;
}
